Attempt to fix horizontal overflow due to Bootstrap rows

--- a/app/styles/css/main.css
+++ b/app/styles/css/main.css
@@ -161,5 +161,13 @@ h1, h2, h3, h4, h5, h6, p, div, span, li {
 	font-family: "Raleway", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
 }
 
+.container-fluid {
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+}
 
-
+body {
+	overflow-x: hidden;
+}
